# qless

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
assets/: app.less  global.less  variable.less
qless/: CMakeLists.txt
qless/src/: buildin.ixx  parser.cpp  parser.h  types.h  utils.hpp
qtheme/: CMakeLists.txt
qtheme/src/: qtheme.cpp  qtheme.h
tests/: CMakeLists.txt
tests/src/: main.cpp  mainwindow.h  mainwindow.ui
