# rayzhang qss_theme
# 2023/12/05

cmake_minimum_required(VERSION 3.25.2)
project(qtheme LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)  
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})

link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

#source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${PROJECT_SOURCES})
#set(CMAKE_PREFIX_PATH "C:/Qt/6.6.0/msvc2019_64")
# set(CMAKE_PREFIX_PATH "C:/Qt6/6.6.1/msvc2019_64")
add_subdirectory(qless)
add_subdirectory(qtheme)
add_subdirectory(tests)
